@@ -7,8 +7,8 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -21,11 +21,7 @@ public class SummonerApiCaller {
     public Summoner getSummonerByName(String name) {
         String url = baseUrl + "/by-name/";
 
-        try {
-            name = URLEncoder.encode(name, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            log.error("%s을 URL encode 하는데 실패했습니다.", name);
-        }
+        name = URLEncoder.encode(name, StandardCharsets.UTF_8);
         
         Summoner summoner = riotApiCaller.call(url + name, MethodType.GET, Summoner.class);
 
